fix url to relative

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Pure CSS Components</title>
-<link rel="stylesheet" href="../common.css">
+<link rel="stylesheet" href="common.css">
 <style>
 a {
   display: block;
@@ -18,8 +18,8 @@ a:hover {
 <body>
 <div class="demo">
   <div class="wrap">
-    <a href="/modal"><h1>Modal</h1></a>
-    <a href="/menu"><h1>Menu</h1></a>
+    <a href="modal"><h1>Modal</h1></a>
+    <a href="menu"><h1>Menu</h1></a>
   </div>
 </div>
 </body>
