change style for modal, fix title of demo

--- a/menu/index.html
+++ b/menu/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>css menu</title>
+<title>Menu - Pure CSS Components</title>
 <link rel="stylesheet" href="../common.css">
 <link rel="stylesheet" href="style.css">
 </head>
